...
                                        </label>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="eventsTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="AW6-yw-9ie" id="ZC7-7Q-atF"/>
                            <outlet property="delegate" destination="AW6-yw-9ie" id="PAj-7C-hPm"/>
                        </connections>
                    </tableView>
...
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uJp-FH-uvY" id="okN-2j-Eiu">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r37-CN-wtu">
                                            <rect key="frame" x="21.5" y="7" width="332" height="30"/>
                                            <state key="normal" title="Fetch Link Token"/>
                                            <connections>
                                                <action selector="handleFetchTap" destination="g4a-YX-SBb" eventType="touchUpInside" id="6cJ-lv-Krc"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <constraints>
...
